--- a/publi.html
+++ b/publi.html
@@ -20,7 +20,7 @@
        <div id='hero' class="container-fluid">
             <div class="row">
                 <div class=" col-md-6">
-                    <h1>Contratá tu centralita</h1>
+                    <h1>Contratá tu centralita!</h1>
                     <p>#revolucionate</p>
                 </div>
                 <div class=" col-md-6">
